@@ -1,3 +1,8 @@
+2005-12-22  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/ModuleDefinition.cs:
+		Protect import from null refs.
+
 2005-12-21  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/StructureWriter.cs:
